# rusty-gifts

./: .env  Cargo.toml  Makefile.toml  README.md  diesel.toml
backend/: Cargo.toml
backend/src/: gift_actions.rs  main.rs  models.rs  schema.rs  user_actions.rs
client/: Cargo.toml  index.html
client/src/: lib.rs  page.rs  route.rs  session.rs
client/src/page/: add_gift_idea.rs  blank.rs  gift_ideas.rs  home.rs  login.rs  not_found.rs  profile.rs  register.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: lib.rs
migrations/2020-04-27-152324_create_users/: up.sql
migrations/2020-04-27-152754_create_gift_ideas/: up.sql
migrations/2020-04-27-152754_create_gifts/: down.sql  up.sql
migrations/2020-04-27-161500_create_destinations/: up.sql
migrations/2020-04-27-162315_create_user_destinations/: down.sql
migrations/2020-04-27-162321_create_user_gifts/: down.sql  up.sql
migrations/2020-05-16-165114_create_recipients/: up.sql
migrations/2020-05-16-165145_create_oauth_account/: up.sql
server/: Cargo.toml
server/migrations/2020-04-27-152754_create_gift_ideas/: down.sql  up.sql
server/migrations/2020-04-27-161500_create_destinations/: down.sql
server/migrations/2020-04-27-162315_create_user_destinations/: up.sql
server/migrations/2020-04-27-162321_create_user_gift_ideas/: down.sql  up.sql
server/src/: gift_actions.rs  gift_idea_actions.rs  main.rs  models.rs  schema.rs  user_actions.rs
shared/: Cargo.toml
shared/src/: lib.rs
