# [package]
# name = "rusty-gifts"
# version = "0.1.0"
# authors = ["Jason Reilly <jdr0887@gmail.com>"]
# edition = "2018"
#
# [dependencies]
# log = { version = "^0.4.8" }
# serde = { version = "1.0", features = ["derive"] }
# simple_logger = "1.6.0"

[workspace]
members = ["server", "client", "shared"]
