[package]
name = "client"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
seed = { path = "../../../../github/seed/seed" }
wasm-bindgen = "^0.2.62"
web-sys = "^0.3.39"
log = { version = "^0.4.8" }
simple_logger = "1.6.0"
