[package]
name = "frontend"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusty-gifts = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
seed = { path = "../../../../github/seed/seed" }
wasm-bindgen = "^0.2.62"
web-sys = "^0.3.39"
