[package]
name = "server"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

[dependencies]
shared = { path = "../shared" }
actix-web = "2.0"
actix-rt = "1.1.1"
actix-files = "0.2.1"
actix-session = "0.3"
actix-utils = "1.0.6"

chrono = { version = "0.4", features = ["serde"] }
bytes = "0.5"
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
log = { version = "^0.4.8" }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
